# mono-micro-haskell

./: BUILD.bazel  WORKSPACE
nix/: README.md  shell.nix
nix/haskell/haskell-packageset/: default.nix
nix/nixpkgs/: default.nix
oss/scotty-forward-headers/: BUILD.bazel
oss/scotty-forward-headers/src/Web/Scotty/: ForwardHeaders.hs
segment-1/engine/first/: BUILD.bazel
segment-1/engine/first/src/: Main.hs
segment-1/engine/second/: BUILD.bazel
segment-1/engine/second/src/: Main.hs
