load(
  "@io_tweag_rules_haskell//haskell:haskell.bzl",
  "haskell_binary",
)

haskell_binary(
  name = "first",
  src_strip_prefix = "src",
  srcs = glob(["src/**/*.hs"]),
  deps = [
    "//oss/scotty-forward-headers",

    "@hackage//:aeson",
    "@hackage//:base",
    "@hackage//:http-client",
    "@hackage//:scotty",
    "@hackage//:text",
    "@hackage//:transformers",
  ],
)
